# AI-Personalized-Learning-Platform

./: .gitignore  README.md  dashboard.py  pyproject.toml
app/: ai_service.py  analytics_queries.py  config.py  database.py  main.py  queries.py  routes.py  schemas.py
