[project]
name = "ai-learning-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "mistralai>=1.12.4",
    "pandas>=3.0.1",
    "protobuf>=6.33.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.9.0",
    "uvicorn>=0.41.0",
]
